SHOP-4: добавил документации для category
