# app/Versions/Private/Http/Controllers/Controller.php
@@ -24,6 +24,7 @@ use OpenApi\Attributes as OA;
     scheme: 'bearer',
 )]
 #[OA\Tag(name: 'Products', description: 'Продукты')]
+#[OA\Tag(name: 'Categories', description: 'Категории')]
 abstract readonly class Controller extends BaseController
 {
     //
